# terraforming-mars

./: .gitignore  Cargo.toml  LICENSE  README.md  card.json  card_list.csv  config.js  state_init.json  state_turn42.json
cards/: AI Central.json  Acquired Company.json  Acquired Space Agency.json  Adaptation Technology.json  Adapted Lichen.json  Advanced Alloys.json  Advanced Ecosystems.json  Aerial Mappers.json  Aerobraked Ammonia Asteroid.json  Aerosport Tournament.json  Air Raid.json  Air-Scrapping Expedition.json  Airliners.json  Algae.json  Allied Bank.json  Anti-Gravity Technology.json  Ants.json  Aphrodite.json  Aquifer Pumping.json  Aquifer Turbines.json  Archaebacteria.json  Arctic Algae.json  Aridor.json  Arklight.json  Artificial Lake.json  Artificial Photosynthesis.json  Asteroid Mining Consortium.json  Asteroid Mining.json  Asteroid.json  Atalanta Planitia Lab.json  Atmo Collectors.json  Atmoscoop.json  Beam From a Thorium Asteroid.json  Big Asteroid.json  Biofuels.json  Biolabs.json  Biomass Combustors.json  Biosphere Support.json  Birds.json  Black Polar Dust.json  (+339 more)
frontent/: hexComponent.js  index.html
patents/: AI Central.json  Acquired Company.json  Acquired Space Agency.json  Adaptation Technology.json  Adapted Lichen.json  Advanced Alloys.json  Advanced Ecosystems.json  Aerial Mappers.json  Aerobraked Ammonia Asteroid.json  Aerosport Tournament.json  Air Raid.json  Air-Scrapping Expedition.json  Airliners.json  Algae.json  Allied Bank.json  Anti-Gravity Technology.json  Ants.json  Aphrodite.json  Aquifer Pumping.json  Aquifer Turbines.json  (+359 more)
(+392 files in other folders)
