[package]
name = "terraforming-mars"
version = "0.1.0"
authors = ["Evylon <mail@evylon.de>"]
edition = "2018"
default-run = "terraforming-mars"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.1.2", features = ["serde", "v4"] }
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
undo = "0.47.2"
tungstenite = "0.17.2"
